Added Conanfile for pkg management, using gtest now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
-
-# criterion issue - Ninja builds cant do git clones? (Using GNU Make instead)
-set(CMAKE_GENERATOR "Unix Makefiles" CACHE INTERNAL "" FORCE)
-
 project(minigdbstub)
 
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
+
 # Build tests
-add_subdirectory(external/criterion)
 add_subdirectory(tests)
