--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
 project(minigdbstub_tests)
-include_directories(${CMAKE_SOURCE_DIR}/external/criterion/include/criterion)
+
+# Include minigdbstub header
 include_directories(${CMAKE_SOURCE_DIR})
-link_directories(${CMAKE_SOURCE_DIR}/build/external/criterion)
 
 # Tests
-add_executable(test_basic test_basic.c)
-target_link_libraries(test_basic criterion)
+add_executable(test_basic test_basic.cpp)
+target_link_libraries(test_basic ${CONAN_LIBS})
