--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ project(minigdbstub_tests)
 
 # Include minigdbstub header
 include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/tests)
 add_definitions(-DMINIGDBSTUB_DEBUG)
 
 # Tests
@@ -12,3 +13,6 @@ target_link_libraries(test_recv ${CONAN_LIBS})
 
 add_executable(test_send test_send.cpp)
 target_link_libraries(test_send ${CONAN_LIBS})
+
+add_executable(test_regs test_regs.cpp)
+target_link_libraries(test_regs ${CONAN_LIBS})
