Updated test runner and consolidated unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,14 +10,10 @@ add_compile_options(-pedantic)
 add_definitions(-DMINIGDBSTUB_DEBUG)
 
 # Tests
-add_executable(test_recv test_recv.cpp)
+add_executable(test_minigdbstub
+    test_recv.cpp
+    test_send.cpp
+    test_regs.cpp
+    test_mem.cpp
+)
 target_link_libraries(test_recv ${CONAN_LIBS})
-
-add_executable(test_send test_send.cpp)
-target_link_libraries(test_send ${CONAN_LIBS})
-
-add_executable(test_regs test_regs.cpp)
-target_link_libraries(test_regs ${CONAN_LIBS})
-
-add_executable(test_mem test_mem.cpp)
-target_link_libraries(test_mem ${CONAN_LIBS})
