Minor project and test fixes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,10 +10,10 @@ add_compile_options(-pedantic)
 add_definitions(-DMINIGDBSTUB_DEBUG)
 
 # Tests
-add_executable(test_minigdbstub
+add_executable(minigdbstub_tests
     test_recv.cpp
     test_send.cpp
     test_regs.cpp
     test_mem.cpp
 )
-target_link_libraries(test_recv ${CONAN_LIBS})
+target_link_libraries(minigdbstub_tests ${CONAN_LIBS})
