Simplify the build, fix win32 signal issues

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,33 +1,24 @@
-cmake_minimum_required(VERSION 3.18)
+
+cmake_minimum_required(VERSION 3.10)
 
 project(minigdbstub_tests)
 
-if (NOT USING_CONAN)
-    set(GTEST_BASEDIR "")
-    find_library(GTEST gtest HINTS ${GTEST_BASEDIR} REQUIRED)
-    find_library(GTEST_MAIN gtest_main HINTS ${GTEST_BASEDIR} REQUIRED)
-endif()
-
-find_package(Threads)
-
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(${CMAKE_SOURCE_DIR}/tests)
-
-if (MSVC)
-    add_compile_options("/W4")
-else()
-    add_compile_options(-Wall)
-    add_compile_options(-pedantic)
-    add_compile_options(-Wno-unused-function)
-endif()
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+# External dependencies
+find_package(GTest CONFIG REQUIRED)
+find_package(Threads REQUIRED)
 
 file(GLOB SRCS *.cpp)
 add_executable(minigdbstub_tests ${SRCS})
-
-if (USING_CONAN)
-    target_link_libraries(minigdbstub_tests ${CONAN_LIBS} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
+target_include_directories(minigdbstub_tests PRIVATE ${CMAKE_SOURCE_DIR})
+target_compile_options(minigdbstub_tests PRIVATE "--std=c++11")
+if (MSVC)
+    target_compile_options(minigdbstub_tests PRIVATE "/W4")
 else()
-    target_link_libraries(minigdbstub_tests ${GTEST} ${GTEST_MAIN} ${CMAKE_THREAD_LIBS_INIT})
+    target_compile_options(minigdbstub_tests PRIVATE -Wall)
+    target_compile_options(minigdbstub_tests PRIVATE -pedantic)
+    target_compile_options(minigdbstub_tests PRIVATE -Wno-unused-function)
 endif()
+target_link_libraries(minigdbstub_tests
+    GTest::gtest
+    GTest::gtest_main
+)
